<resources>
    <string name="app_name">My Application 2</string>
    <string name="b1">+</string>
    <string name="b2">-</string>
    <string name="b3">*</string>
    <string name="b4">/</string>
    <string name="m1">Enter first number</string>
    <string name="m2">Enter second number</string>
    <string name="m3">Result</string>
    <string name="m4">Made by Snehal Jain</string>
    <string name="b5">Clear</string>
</resources>